# Learning_OpenGL_2

./: CMakeLists.txt  poop.txt
lib/: CMakeLists.txt
lib/include/imgui/: imgui_impl_glfw.cpp
src/: CMakeLists.txt  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  settings.h  shader.cpp  shader.h  storage.cpp  storage.h  texture.cpp  texture.h  utility.cpp  utility.h
src/objects/: cube.cpp  cube.h
src/shaders/: computeShader.comp  fragmentShader.fs  fragmentShaderTex.fs  lightFragmentShader.fs  vertexShader.vs
